--- a/_config.yml
+++ b/_config.yml
@@ -29,14 +29,14 @@ projects:
     projects:
     # - repo-name
 
-# social_media:
+social_media:
+  linkedin: sanketsans
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
   # hackerrank: your_username
   # instagram: your_username
   # keybase: your_username
-  # linkedin: your_username
   # mastodon: your_username
   # medium: your_username
   # stackoverflow: your_user_id
