added papers to the blog and twitter share option

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,9 @@ projects:
     # - repo-name
 
 social_media:
-  linkedin: sanketsans
+  linkedin: sanketsans97
+  twitter: sanketsans97
+  github: sanketsans
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
